Refactor agent service to LLM-first tool-use architecture
- Replace rule-heavy intent layer with safety-only short-circuit filter
- Add ToolRegistry/ToolExecutor and function tools (search_posts, remember_name, navigate_to)
- Rewrite DialogueOrchestrator to let LLM decide tool calls and synthesize answers
- Integrate orchestrator into AgentChatService with user profile and previous refs
- Update prompt constants for tool-use system prompt
- Fix public endpoint whitelist and AntiReplayFilter behavior
- Adjust tests to match new routes, token budgets, vector store SQL and safety rules
- Disable outdated AgentChatServicePromptIntegrationTest pending tool-use rewrite